--- a/app/view/browser.html
+++ b/app/view/browser.html
@@ -20,15 +20,31 @@
     <div id="wvc" class="webview"></div>
     <div class="menubar">
       <div class="menubar-left">
-        <button class="mbutton" onclick='webview.loadURL(`https://www.google.com`);'><i class="fas fa-home"></i></button>
-        <button class="mbutton" onclick='MicroModal.show("modal-fav")'>Favoris</button>
-        <button class="mbutton">Historique</button>
+        <button
+          class="mbutton"
+          onclick="webview.loadURL(`https://www.google.com`);"
+        >
+          <i class="fas fa-home"></i>
+        </button>
+        <button class="mbutton" onclick='MicroModal.show("modal-fav")'>
+          Favoris
+        </button>
+        <button class="mbutton" onclick='MicroModal.show("modal-hist")'>Historique</button>
       </div>
       <div class="menubar-right">
-        <button id="fav-button" class="mbutton" onclick="addWebsite()"><i class="far fa-star"></i></button>
-        <button class="mbutton" onclick="back();"><i class="fas fa-arrow-left"></i></button>
-        <button class="mbutton" onclick="forward();"><i class="fas fa-arrow-right"></i></button>
-        <button class="mbutton" onclick="reload();"><i class="fas fa-sync"></i></button>
+        <div id="security"></div>
+        <button id="fav-button" class="mbutton" onclick="addWebsite()">
+          <i class="far fa-star"></i>
+        </button>
+        <button class="mbutton" onclick="back();">
+          <i class="fas fa-arrow-left"></i>
+        </button>
+        <button class="mbutton" onclick="forward();">
+          <i class="fas fa-arrow-right"></i>
+        </button>
+        <button class="mbutton" onclick="reload();">
+          <i class="fas fa-sync"></i>
+        </button>
       </div>
     </div>
 
@@ -36,44 +52,52 @@
       var lastUrl;
       var trusted = [];
       var favorites = [];
+      var histo = [];
 
       var oldDiv = document.getElementById("wvc");
       document.getElementById(
         "wvc"
       ).innerHTML = `<webview id="webview" class="navigateur" src="${window.api.url}"></webview>`;
       var webview = document.getElementById("webview");
-      webview.addEventListener('dom-ready', () => {
+      webview.addEventListener("dom-ready", () => {
         window.api.getTrusted();
         window.api.getWebSiteStore();
-      })
+        updateLock()
+      });
       window.api.receive("trusted", (data) => {
         trusted = data;
       });
 
-
       window.api.receive("getWebSiteStore", (data) => {
-            siteList = data
-            var count = 0
-            var ul = document.getElementById("fav-list");
-            ul.innerHTML = ""
-            favorites=[]
-            siteList.forEach(function(item) {
-              favorites.push(item.url);
-              var li = document.createElement("li");
-              li.appendChild(document.createTextNode(item.title));
-              li.setAttribute("onClick", "webview.loadURL('"+item.url+"');");
-              ul.appendChild(li);
-            })
-            updateStar()
-        })
+        siteList = data;
+        var count = 0;
+        var ul = document.getElementById("fav-list");
+        ul.innerHTML = "";
+        favorites = [];
+        siteList.forEach(function (item) {
+          favorites.push(item.url);
+          var li = document.createElement("li");
+          li.appendChild(document.createTextNode(item.title));
+          li.setAttribute("onClick", "webview.loadURL('" + item.url + "');");
+          ul.appendChild(li);
+        });
+        updateStar();
+      });
 
-      function addWebsite(){
-        window.api.addWebSiteStore({'url': webview.getURL(), 'title': webview.getTitle()})
+      function addWebsite() {
+        window.api.addWebSiteStore({
+          url: webview.getURL(),
+          title: webview.getTitle(),
+        });
         window.api.getWebSiteStore();
       }
 
       function getDomainFromUrl(url) {
-        return url.replace("https://", "").split("/")[0];
+        if(url.startsWith('https://')){
+          return url.replace("https://", "").split("/")[0];
+        }else{
+          return url.replace("http://", "").split("/")[0];
+        }
       }
 
       function back() {
@@ -92,12 +116,33 @@
         }
       }
 
-      function updateStar(){
-        if(favorites.includes(webview.getURL())){
-              document.getElementById('fav-button').innerHTML="<i class='fas fa-star'></i>"
-            }else{
-              document.getElementById('fav-button').innerHTML="<i class='far fa-star'></i>"
-            }
+      function addHistory(url, title){
+        var ul = document.getElementById("hist-list");
+        histo.push(url);
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode(title));
+        li.setAttribute("onClick", "webview.loadURL('" + url + "');");
+        ul.prepend(li);
+      }
+
+      function updateStar() {
+        if (favorites.includes(webview.getURL())) {
+          document.getElementById("fav-button").innerHTML =
+            "<i class='fas fa-star'></i>";
+        } else {
+          document.getElementById("fav-button").innerHTML =
+            "<i class='far fa-star'></i>";
+        }
+      }
+
+      function updateLock(){
+        if(webview.getURL().startsWith("https://")){
+          document.getElementById("security").innerHTML=
+          '<p style="color: green"><i class="fas fa-lock"></i> Site sécurisé</p>'
+        }else{
+          document.getElementById("security").innerHTML=
+          '<p style="color: red"><i class="fas fa-lock-open"></i> Site non sécurisé</p>'
+        }
       }
 
       webview.addEventListener("will-navigate", (e) => {
@@ -131,130 +176,67 @@
             webview.loadURL(lastUrl);
           }
         }
-        updateStar()
+        if(webview.getURL()!=lastUrl){
+          addHistory(webview.getURL(), webview.getTitle())
+        }
+        updateLock();
+        updateStar();
       });
     </script>
 
-
-
-
-<div class="modal micromodal-slide" id="modal-fav" aria-hidden="true">
-    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
-      <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
-        <header class="modal__header">
-          <h2 class="modal__title" id="modal-1-title">
-            Favoris
-          </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
-        </header>
-        <main class="modal__content" id="modal-1-content">
-        <div class="overflow">
-          <ul id="fav-list">
-              <li>Test 1</li>
-              <li>Test 2</li>
-              <li>Test 3</li>
-              <li>Test 4</li>
-              <li>Test 5</li>
-              <li>Test 6</li>
-              <li>Test 7</li>
-              <li>Test 8</li>
-              <li>Test 9</li>
-              <li>Test 10</li>
-              <li>Test 11</li>
-              <li>Test 12</li>
-              <li>Test 13</li>
-              <li>Test 14</li>
-              <li>Test 15</li>
-              <li>Test 16</li>
-              <li>Test 17</li>
-              <li>Test 18</li>
-              <li>Test 19</li>
-              <li>Test 20</li>
-              <li>Test 21</li>
-              <li>Test 22</li>
-              <li>Test 23</li>
-              <li>Test 24</li>
-              <li>Test 25</li>
-              <li>Test 26</li>
-              <li>Test 27</li>
-              <li>Test 28</li>
-              <li>Test 29</li>
-              <li>Test 30</li>
-              <li>Test 31</li>
-              <li>Test 32</li>
-              <li>Test 33</li>
-              <li>Test 34</li>
-              <li>Test 35</li>
-              <li>Test 36</li>
-              <li>Test 37</li>
-              <li>Test 38</li>
-              <li>Test 39</li>
-              <li>Test 40</li>
-              <li>Test 41</li>
-              <li>Test 42</li>
-              <li>Test 43</li>
-              <li>Test 44</li>
-              <li>Test 45</li>
-              <li>Test 46</li>
-              <li>Test 47</li>
-              <li>Test 48</li>
-              <li>Test 49</li>
-              <li>Test 50</li>
-              <li>Test 51</li>
-              <li>Test 52</li>
-              <li>Test 53</li>
-              <li>Test 54</li>
-              <li>Test 55</li>
-              <li>Test 56</li>
-              <li>Test 57</li>
-              <li>Test 58</li>
-              <li>Test 59</li>
-              <li>Test 60</li>
-              <li>Test 61</li>
-              <li>Test 62</li>
-              <li>Test 63</li>
-              <li>Test 64</li>
-              <li>Test 65</li>
-              <li>Test 66</li>
-              <li>Test 67</li>
-              <li>Test 68</li>
-              <li>Test 69</li>
-              <li>Test 70</li>
-              <li>Test 71</li>
-              <li>Test 72</li>
-              <li>Test 73</li>
-              <li>Test 74</li>
-              <li>Test 75</li>
-              <li>Test 76</li>
-              <li>Test 77</li>
-              <li>Test 78</li>
-              <li>Test 79</li>
-              <li>Test 80</li>
-              <li>Test 81</li>
-              <li>Test 82</li>
-              <li>Test 83</li>
-              <li>Test 84</li>
-              <li>Test 85</li>
-              <li>Test 86</li>
-              <li>Test 87</li>
-              <li>Test 88</li>
-              <li>Test 89</li>
-              <li>Test 90</li>
-              <li>Test 91</li>
-              <li>Test 92</li>
-              <li>Test 93</li>
-              <li>Test 94</li>
-              <li>Test 95</li>
-              <li>Test 96</li>
-              <li>Test 97</li>
-              <li>Test 98</li>
-              <li>Test 99</li>
-              <li>Test 100</li>
-          </ul>
+    <div class="modal micromodal-slide" id="modal-fav" aria-hidden="true">
+      <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div
+          class="modal__container"
+          role="dialog"
+          aria-modal="true"
+          aria-labelledby="modal-1-title"
+        >
+          <header class="modal__header">
+            <h2 class="modal__title" id="modal-1-title">
+              Favoris
+            </h2>
+            <button
+              class="modal__close"
+              aria-label="Close modal"
+              data-micromodal-close
+            ></button>
+          </header>
+          <main class="modal__content" id="modal-1-content">
+            <div class="overflow">
+              <ul id="fav-list"></ul>
+            </div>
+          </main>
         </div>
-        </main>
       </div>
     </div>
-  </div>
+
+
+    <div class="modal micromodal-slide" id="modal-hist" aria-hidden="true">
+      <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div
+          class="modal__container"
+          role="dialog"
+          aria-modal="true"
+          aria-labelledby="modal-1-title"
+        >
+          <header class="modal__header">
+            <h2 class="modal__title" id="modal-1-title">
+              Historique
+            </h2>
+            <button
+              class="modal__close"
+              aria-label="Close modal"
+              data-micromodal-close
+            ></button>
+          </header>
+          <main class="modal__content" id="modal-1-content">
+            <div class="overflow">
+              <ul id="hist-list"></ul>
+            </div>
+          </main>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
